[package]
name = "ent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bitvec = "1.0.1"
bytes = "1.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.9"
sha1 = "0.10.5"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "io"] }
